--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -31,7 +31,7 @@ jobs:
           declare -A sizes=(["mdpi"]=48 ["hdpi"]=72 ["xhdpi"]=96 ["xxhdpi"]=144 ["xxxhdpi"]=192)
           for d in "${!sizes[@]}"; do
             mkdir -p SDL/android-project/app/src/main/res/mipmap-$d
-            convert assets/android/icon.png -resize ${sizes[$d]}x${sizes[$d]} SDL/android-project/app/src/main/res/mipmap-$d/ic_launcher.png
+            convert ${{ env.ICON_PATH }} -resize ${sizes[$d]}x${sizes[$d]} SDL/android-project/app/src/main/res/mipmap-$d/ic_launcher.png
           done
 
       - name: Build the APK
