--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ if (ANDROID)
 	add_library(${EXECUTABLE_NAME} SHARED)
 elseif(WIN32)
     add_executable(${EXECUTABLE_NAME} WIN32)
+    target_sources(${EXECUTABLE_NAME} PRIVATE ${JSON_RESOURCES_PATH}/appicon.rc)
 else()
 	add_executable(${EXECUTABLE_NAME})
 endif()
