--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,8 +65,8 @@ set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE INTERNAL "")
 # Declare the project
 project(${JSON_PROJECT} VERSION ${JSON_VERSION} LANGUAGES CXX)
 
-if ((APPLE AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin") OR EMSCRIPTEN)
-    set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")    # Disable shared builds on platforms where it does not make sense to use them
+if((APPLE AND NOT CMAKE_SYSTEM_NAME MATCHES "Darwin") OR EMSCRIPTEN)
+    set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "") # Disable shared builds on platforms where it does not make sense to use them
     set(SDL_SHARED OFF)
 else()
     set(SDL_SHARED ON)
@@ -74,7 +74,7 @@ endif()
 
 if(MSVC)
     if(NOT CMAKE_GENERATOR STREQUAL "Ninja")
-        add_definitions(/MP)				# parallelize each target, unless Ninja is the generator
+        add_definitions(/MP) # parallelize each target, unless Ninja is the generator
     endif()
 endif()
 
@@ -82,15 +82,15 @@ endif()
 set(EXECUTABLE_NAME ${JSON_PROJECT})
 
 # Create an executable or a shared library based on the platform and add our sources to it
-if (ANDROID)
-	# The SDL java code is hardcoded to load libmain.so on android, so we need to change EXECUTABLE_NAME
-	set(EXECUTABLE_NAME main)
-	add_library(${EXECUTABLE_NAME} SHARED)
+if(ANDROID)
+    # The SDL java code is hardcoded to load libmain.so on android, so we need to change EXECUTABLE_NAME
+    set(EXECUTABLE_NAME main)
+    add_library(${EXECUTABLE_NAME} SHARED)
 elseif(WIN32)
     add_executable(${EXECUTABLE_NAME} WIN32)
-    target_sources(${EXECUTABLE_NAME} PRIVATE ${JSON_RESOURCES_PATH}/appicon.rc)
+    # target_sources(${EXECUTABLE_NAME} PRIVATE ${JSON_RESOURCES_PATH}/appicon.rc)
 else()
-	add_executable(${EXECUTABLE_NAME})
+    add_executable(${EXECUTABLE_NAME})
 endif()
 
 target_include_directories(${EXECUTABLE_NAME} PRIVATE ${JSON_INCLUDE_PATH})
@@ -100,7 +100,7 @@ file(GLOB SOURCES ${JSON_SOURCE_PATH}/*.cpp)
 
 # Add manually extra files (e.g., platform-specific or non-.cpp files)
 if(ANDROID)
-    set(EXTRA_SOURCES "")  # Android cannot compile .storyboard
+    set(EXTRA_SOURCES "") # Android cannot compile .storyboard
 else()
     set(EXTRA_SOURCES
         ${JSON_RESOURCES_PATH}/iosLaunchScreen.storyboard
@@ -136,7 +136,7 @@ target_compile_features(${EXECUTABLE_NAME} PUBLIC cxx_std_23)
 
 # on Web targets, we need CMake to generate a HTML webpage. 
 if(EMSCRIPTEN)
-	set(CMAKE_EXECUTABLE_SUFFIX ".js" CACHE INTERNAL "")
+    set(CMAKE_EXECUTABLE_SUFFIX ".js" CACHE INTERNAL "")
 endif()
 
 # Configure SDL by calling its CMake file.
@@ -146,38 +146,38 @@ add_subdirectory(SDL EXCLUDE_FROM_ALL)
 
 # If you don't want SDL_ttf, then remove this section.
 set(SDLTTF_VENDORED ON) # tell SDL_ttf to build its own dependencies
-add_subdirectory(SDL_ttf EXCLUDE_FROM_ALL)	
+add_subdirectory(SDL_ttf EXCLUDE_FROM_ALL)
 
 # SDL_mixer (used for playing audio)
-set(SDLMIXER_MIDI_NATIVE OFF)     # disable formats we don't use to make the build faster and smaller. Also some of these don't work on all platforms so you'll need to do some experimentation.
+set(SDLMIXER_MIDI_NATIVE OFF) # disable formats we don't use to make the build faster and smaller. Also some of these don't work on all platforms so you'll need to do some experimentation.
 set(SDLMIXER_GME OFF)
-set(SDLMIXER_WAVPACK OFF)     
+set(SDLMIXER_WAVPACK OFF)
 set(SDLMIXER_MOD OFF)
 set(SDLMIXER_OPUS OFF)
 set(SDLMIXER_MP3_MPG123 OFF)
 set(SDLMIXER_VORBIS_VORBISFILE OFF)
 set(SDLMIXER_FLAC_LIBFLAC OFF)
-set(SDLMIXER_VENDORED ON)   # tell SDL_mixer to build its own dependencies
+set(SDLMIXER_VENDORED ON) # tell SDL_mixer to build its own dependencies
 add_subdirectory(SDL_mixer EXCLUDE_FROM_ALL)
 
 # SDL_image (used for loading various image formats)
 set(SDLIMAGE_VENDORED ON)
-set(SDLIMAGE_AVIF OFF)	# disable formats we don't use to make the build faster and smaller.
+set(SDLIMAGE_AVIF OFF) # disable formats we don't use to make the build faster and smaller.
 set(SDLIMAGE_BMP OFF)
 set(SDLIMAGE_JPEG OFF)
 set(SDLIMAGE_WEBP OFF)
 add_subdirectory(SDL_image EXCLUDE_FROM_ALL)
 
 # Link SDL to our executable. This also makes its include directory available to us. 
-target_link_libraries(${EXECUTABLE_NAME} PUBLIC 
-	SDL3_ttf::SDL3_ttf      # remove if you are not using SDL_ttf
-	SDL3_mixer::SDL3_mixer  # remove if you are not using SDL_mixer
-	SDL3_image::SDL3_image	# remove if you are not using SDL_image
-    SDL3::SDL3              # If using satelite libraries, SDL must be the last item in the list. 
+target_link_libraries(${EXECUTABLE_NAME} PUBLIC
+    SDL3_ttf::SDL3_ttf # remove if you are not using SDL_ttf
+    SDL3_mixer::SDL3_mixer # remove if you are not using SDL_mixer
+    SDL3_image::SDL3_image # remove if you are not using SDL_image
+    SDL3::SDL3 # If using satelite libraries, SDL must be the last item in the list. 
 )
 
 # SDL_Image bug: https://github.com/libsdl-org/SDL_image/issues/506
-if (APPLE AND NOT BUILD_SHARED_LIBS)
+if(APPLE AND NOT BUILD_SHARED_LIBS)
     find_library(IO_LIB ImageIO REQUIRED)
     find_library(CS_LIB CoreServices REQUIRED)
     find_library(CT_LIB CoreText REQUIRED)
@@ -193,7 +193,7 @@ set(ASSETS_DIR ${JSON_ASSETS_PATH})
 # Collect all files in the assets folder (recursively)
 file(GLOB_RECURSE ASSETS ${JSON_ASSETS_PATH}/*)
 
-if (APPLE)
+if(APPLE)
     # On Apple, put everything into the app bundle Resources folder
     foreach(asset ${ASSETS})
         file(RELATIVE_PATH relpath ${JSON_ASSETS_PATH} ${asset})
@@ -211,32 +211,58 @@ elseif(EMSCRIPTEN)
     endforeach()
 
 else()
-    if (ANDROID)
-        if (NOT MOBILE_ASSETS_DIR)
+    if(ANDROID)
+        if(NOT MOBILE_ASSETS_DIR)
             message(FATAL_ERROR "Building for Android, but MOBILE_ASSETS_DIR is not set")
         endif()
         file(MAKE_DIRECTORY "${MOBILE_ASSETS_DIR}")
     endif()
 
+    # foreach(asset ${ASSETS})
+    #     file(RELATIVE_PATH relpath ${JSON_ASSETS_PATH} ${asset})
+
+    #     if (ANDROID)
+    #         set(outname "${MOBILE_ASSETS_DIR}/${relpath}")
+    #     else()
+    #         set(outname "${CMAKE_BINARY_DIR}/$<CONFIGURATION>/${relpath}")
+    #     endif()
+
+    #     # Ensure target directory exists
+    #     add_custom_command(POST_BUILD
+    #         TARGET ${EXECUTABLE_NAME}
+    #         COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${relpath}"
+    #     )
+
+    #     # Copy asset file
+    #     add_custom_command(POST_BUILD
+    #         TARGET ${EXECUTABLE_NAME}
+    #         COMMAND ${CMAKE_COMMAND} -E copy_if_different ${asset} "${outname}"
+    #         DEPENDS ${asset}
+    #     )
+    # endforeach()
+
     foreach(asset ${ASSETS})
         file(RELATIVE_PATH relpath ${JSON_ASSETS_PATH} ${asset})
+        get_filename_component(asset_dir "${relpath}" DIRECTORY)
 
-        if (ANDROID)
+        if(ANDROID)
             set(outname "${MOBILE_ASSETS_DIR}/${relpath}")
         else()
             set(outname "${CMAKE_BINARY_DIR}/$<CONFIGURATION>/${relpath}")
         endif()
 
-        # Ensure target directory exists
+        # Ensure the directory exists (fix)
         add_custom_command(POST_BUILD
             TARGET ${EXECUTABLE_NAME}
-            COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${relpath}"
+            COMMAND ${CMAKE_COMMAND} -E make_directory
+            "$<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/${asset_dir}"
         )
 
-        # Copy asset file
+        # Copy the file
         add_custom_command(POST_BUILD
             TARGET ${EXECUTABLE_NAME}
-            COMMAND ${CMAKE_COMMAND} -E copy_if_different ${asset} "${outname}"
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+            ${asset} "${outname}"
             DEPENDS ${asset}
         )
     endforeach()
@@ -248,7 +274,7 @@ if(IOS)
     set(RESOURCE_FILES ${JSON_RESOURCES_PATH}/iosLaunchScreen.storyboard;${JSON_ICON_PATH}) # make the splash screen show up on iOS
 endif()
 
-set_target_properties(${EXECUTABLE_NAME} PROPERTIES 
+set_target_properties(${EXECUTABLE_NAME} PROPERTIES
     # On macOS, make a proper .app bundle instead of a bare executable
     MACOSX_BUNDLE TRUE
     # Set the Info.plist file for Apple Mobile platforms. Without this file, your app
@@ -259,8 +285,8 @@ set_target_properties(${EXECUTABLE_NAME} PROPERTIES
     XCODE_GENERATE_SCHEME TRUE
     # Identification for Xcode
     XCODE_ATTRIBUTE_BUNDLE_IDENTIFIER "com.ravbug.sdl3-sample"
-	XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.ravbug.sdl3-sample"
-	XCODE_ATTRIBUTE_CURRENTYEAR "${CURRENTYEAR}"
+    XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "com.ravbug.sdl3-sample"
+    XCODE_ATTRIBUTE_CURRENTYEAR "${CURRENTYEAR}"
     RESOURCE "${RESOURCE_FILES}"
 )
 
@@ -273,15 +299,15 @@ set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT "
 if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
     # tell Install about the target, otherwise fixup won't know about the transitive dependencies
     install(TARGETS ${EXECUTABLE_NAME}
-    	BUNDLE DESTINATION ./install COMPONENT Runtime
-   	    RUNTIME DESTINATION ./install/bin COMPONENT Runtime
+        BUNDLE DESTINATION ./install COMPONENT Runtime
+        RUNTIME DESTINATION ./install/bin COMPONENT Runtime
     )
-	
-    set(DEP_DIR "${CMAKE_BINARY_DIR}")  # where to look for dependencies when fixing up
-    INSTALL(CODE 
+
+    set(DEP_DIR "${CMAKE_BINARY_DIR}") # where to look for dependencies when fixing up
+    INSTALL(CODE
         "include(BundleUtilities)
         fixup_bundle(\"$<TARGET_BUNDLE_DIR:${EXECUTABLE_NAME}>\" \"\" \"${DEP_DIR}\")
-        " 
+        "
     )
     set(CPACK_GENERATOR "DragNDrop")
     include(CPack)
