--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -21,9 +21,11 @@ jobs:
             run: |
               ICON_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['icon-path'])")
               PROJECT=$(python3 -c "import json; print(json.load(open('assets/info.json'))['project'])")
+              ASSETS_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['assets-path'])")
               RESOURCES_PATH=$(python3 -c "import json; print(json.load(open('assets/info.json'))['resources-path'])")
               echo "ICON_PATH=$ICON_PATH" >> $GITHUB_ENV
               echo "PROJECT=$PROJECT" >> $GITHUB_ENV
+              echo "ASSETS_PATH=$ASSETS_PATH" >> $GITHUB_ENV
               echo "RESOURCES_PATH=$RESOURCES_PATH" >> $GITHUB_ENV
 
           - name: Install ImageMagick
@@ -37,12 +39,22 @@ jobs:
             run: cmake -DCMAKE_SYSTEM_NAME=${{ matrix.target }} -DCMAKE_SYSTEM_VERSION="10.0" -A${{ matrix.arch }} -S . -B build
           - name: Build
             run: cmake --build build --target ${{ env.PROJECT }} --config Release
+
+          - name: Copy Assets
+            shell: bash
+            run: |
+              mkdir -p build/Release/assets
+              cp -r "${{ env.ASSETS_PATH }}"/* build/Release/${{ env.ASSETS_PATH }}
+
           - name: Upload Build
             uses: actions/upload-artifact@v4
             if: ${{ matrix.target != 'WindowsStore' }}
             with: 
                 name: ${{ env.PROJECT }}-${{ matrix.target }}-${{ matrix.arch }}
                 path: |
-                    assets
-                    build/Release/*.exe
-                    build/Release/*.dll
+                    build/Release/${{ env.ASSETS_PATH }}
+                    build/Release/${{ env.PROJECT }}.exe
+                    build/Release/SDL3.dll
+                    build/Release/SDL3_image.dll
+                    build/Release/SDL3_mixer.dll
+                    build/Release/SDL3_ttf.dll
