--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -51,8 +51,8 @@ jobs:
                 name: ${{ env.PROJECT }}-Linux
                 path: |
                     build/Release/${{ env.ASSETS_PATH }}
-                    build/Release/${{ env.PROJECT }}.exe
-                    build/Release/SDL3.so
-                    build/Release/SDL3_image.so
-                    build/Release/SDL3_mixer.so
-                    build/Release/SDL3_ttf.so
+                    build/Release/${{ env.PROJECT }}
+                    build/Release/libSDL3.so
+                    build/Release/libSDL3_image.so
+                    build/Release/libSDL3_mixer.so
+                    build/Release/libSDL3_ttf.so
