--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -45,6 +45,13 @@ jobs:
               mkdir -p build/Release/assets
               cp -r "${{ env.ASSETS_PATH }}"/* build/Release/${{ env.ASSETS_PATH }}
 
+          - name: Generate SONAME
+            run: |
+              ln -s build/Release/libSDL3_ttf.so build/Release/libSDL3_ttf.so.0
+              ln -s build/Release/libSDL3.so lbuild/Release/libSDL3.so.0
+              ln -s build/Release/libSDL3_image.so build/Release/libSDL3_image.so.0
+              ln -s build/Release/libSDL3_mixer.so build/Release/libSDL3_mixer.so.0
+
           - name: Upload Build
             uses: actions/upload-artifact@v4
             with: 
@@ -56,3 +63,7 @@ jobs:
                     build/Release/libSDL3_image.so
                     build/Release/libSDL3_mixer.so
                     build/Release/libSDL3_ttf.so
+                    build/Release/libSDL3.so.0
+                    build/Release/libSDL3_image.so.0
+                    build/Release/libSDL3_mixer.so.0
+                    build/Release/libSDL3_ttf.so.0
